unpackaged/main/default/objects/OMS_Cancel_Event__e/OMS_Cancel_Event__e.object-meta.xml
<CustomObject>
    <label>OMS Cancel Event</label>
    <pluralLabel>OMS Cancel Events</pluralLabel>
</CustomObject>