unpackaged/main/default/objects/OMS_Cancel_Event__e/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>