unpackaged/main/default/objects/OMS_Cancel_Event__e/fields/Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Id__c</fullName>
    <label>Order Item Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>