unpackaged/main/default/objects/OMS_Cancel_Event__e/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>