unpackaged/main/default/objects/OMS_Cancel_Event__e/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>